Bug 1735601 - Remove temporary attachments in nsMsgCompose dtor. r=mkmelin

nsMsgCompose::CloseWindow may be called multiple times.

Differential Revision: https://phabricator.services.mozilla.com/D128567

--HG--
extra : amend_source : f6e281535551979f091dba6021e766479598aaa5